--- a/src/App.css
+++ b/src/App.css
@@ -1,19 +1,19 @@
-.App {
+/* .App {
   text-align: center;
-}
-
+} */
+/* 
 .App-logo {
   height: 40vmin;
   pointer-events: none;
-}
+} */
 
-@media (prefers-reduced-motion: no-preference) {
+/* @media (prefers-reduced-motion: no-preference) {
   .App-logo {
     animation: App-logo-spin infinite 20s linear;
   }
-}
+} */
 
-.App-header {
+/* .App-header {
   background-color: #282c34;
   min-height: 100vh;
   display: flex;
@@ -22,9 +22,9 @@
   justify-content: center;
   font-size: calc(10px + 2vmin);
   color: white;
-}
+} */
 
-.App-link {
+/* .App-link {
   color: #61dafb;
 }
 
@@ -35,14 +35,19 @@
   to {
     transform: rotate(360deg);
   }
-}
+} */
 
 .container {
-
-  min-height: 100vh;
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
+  text-align: center;
+  justify-content: space-between;
   font-size: calc(10px + 2vmin);
+}
+
+.quote-box {
+  width: 500px;
+  height: auto;
+  background-color: white;
+  border-radius: 6px;
+  padding: 20px;
 }
