--- a/src/App.css
+++ b/src/App.css
@@ -1,19 +1,19 @@
 /* .App {
   text-align: center;
-} */
-/* 
+}
+
 .App-logo {
   height: 40vmin;
   pointer-events: none;
-} */
+}
 
-/* @media (prefers-reduced-motion: no-preference) {
+@media (prefers-reduced-motion: no-preference) {
   .App-logo {
     animation: App-logo-spin infinite 20s linear;
   }
-} */
+}
 
-/* .App-header {
+.App-header {
   background-color: #282c34;
   min-height: 100vh;
   display: flex;
@@ -22,9 +22,9 @@
   justify-content: center;
   font-size: calc(10px + 2vmin);
   color: white;
-} */
+}
 
-/* .App-link {
+.App-link {
   color: #61dafb;
 }
 
@@ -39,8 +39,10 @@
 
 .container {
   display: flex;
+  position: relative;
   text-align: center;
-  justify-content: space-between;
+  align-items: center;
+  justify-content: center;
   font-size: calc(10px + 2vmin);
 }
 
@@ -50,4 +52,24 @@
   background-color: white;
   border-radius: 6px;
   padding: 20px;
+}
+
+.quote {
+  font-family: Lobster;
+  font-size: 25px;
+}
+
+.new-quote {
+  color: white;
+}
+
+.author {
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 15px;
+  text-align: right;
+}
+
+.buttons {
+  display: flex;
+  justify-content: space-between;
 }
